Fix: overflow mobile and explore button in center

--- a/src/Component/Molecules/VideoPopUp/VideoPopUp.module.css
+++ b/src/Component/Molecules/VideoPopUp/VideoPopUp.module.css
@@ -59,5 +59,8 @@
     .playBtn {
         position: initial;
         transform: unset;
+        width: unset;
+            padding-inline: 35px;
+            font-size: 12px;
     }
 }
